Name:       FormulaRenderer
Version:    1.1.1
Synopsis:   Render math formula in ASCII, and perform some simplifications
Build-Type: Simple
Category:   Language
Cabal-Version:  >= 1.6
Description:    Haskell formula manipulation program
Author:         Vincent Berthoux
Maintainer:     Vincent Berthoux <vincent.berthoux@gmail.com>
License:        BSD3

Flag Debug
    Description: Enable debug prints
    Default: False

Flag TestProject
    Description: Enable compilation of the test project
    Default: False

Flag StaticLinking
    Description: Try to link statically on Linux
    Default: False

Flag optimize
    Description: turn on optimisation
    Default: True

Source-Repository head
  Type:     git
  Location: git://github.com/Twinside/Eq.git

Source-Repository this
  Type:     git
  Location: git://github.com/Twinside/Eq.git
  Tag:      v1.1.1

-- Main executable
Executable eq
    Main-Is: formulaMain.hs
    Extensions: CPP
    Ghc-options:-Wall

    -- Special static linking only required
    -- in linux so far.
    if !os(darwin) && !os(windows) && flag(StaticLinking)
        Ghc-options:-static -optl-static -optl-pthread

    if flag(debug)
        cpp-options:-D_DEBUG
        Ghc-options:-D_DEBUG

    if flag(optimize)
        Ghc-options:-O3

    Build-Depends: base             >= 4.1 && < 5.0
                 , parsec           >= 3.1 && < 3.2
                 , HaXml            >= 1.9 && < 2.0
                 , mtl              >= 2.1 && < 2.2
                 , transformers     >= 0.2 && < 0.4
                 , template-haskell >= 2.7 && < 2.8
                 , containers       >= 0.4 && < 0.5
                 , filepath         >= 1.3 && < 1.4
                 , array            >= 0.4 && < 0.5

Executable eqtestsuite
    Main-Is: Language/Eq/Tests/iotestSuite.hs
    ghc-options: -Wall
    extensions: CPP
    if flag(debug)
        cpp-options: -D_DEBUG
    Build-Depends: base         >= 4.1 && < 5.0
                 , parsec       >= 3.1 && < 3.2
                 , HaXml        >= 1.9 && < 2.0
                 , containers   >= 0.4 && < 0.5
                 , filepath     >= 1.3 && < 1.4
                 , array        >= 0.4 && < 0.5

                 , directory        >= 1.1 && < 1.2
                 , template-haskell >= 2.7 && < 2.8
                 , QuickCheck       >= 2.4 && < 2.5
                 , HUnit            >= 1.2.2.1 && < 2.0

